refactor: add basic settings

--- a/project/sample-apps/bubblelevel.yml
+++ b/project/sample-apps/bubblelevel.yml
@@ -1,3 +1,4 @@
+# TODO
 - 内容: 'This method returns a string describing the value of a Double using a fixed number of digits. You can pass in the number of integer digits and fraction digits you want, or leave those arguments out for the default values of 2.'
   提示: ''
   翻译: ''
