--- a/project/sample-apps/bubblelevel.yml
+++ b/project/sample-apps/bubblelevel.yml
@@ -159,136 +159,136 @@
   翻译: '这个属性会持有一个 MotionDetector 实例。运动检测器会感知你的设备运动的变化，并为你提供这些数据，以便你在代码中使用。'
 - 内容: 'Because detector is an observable object, any changes made to its published values cause SwiftUI to automatically update any views using those values. In this case, changes from the device’s sensors update the Text view with the latest values for the pitch and roll.'
   提示: ''
-  翻译: '因为 detector 是一个可观察对象，所以对它的 published 值所做的任何更改都会导致 SwiftUI 自动更新使用这些值的任何视图。在这种情况下，来自设备传感器的更改会使用最新的俯仰角和翻滚角的值更新 Text 视图上的字符。'
+  翻译: '因为 detector 是一个可观察对象，所以对它的 published 值所做的任何更改都会导致 SwiftUI 自动更新使用这些值的任何视图。在这种情况下，来自设备传感器的更改会使用最新的 roll 和 pitch 的值更新 Text 视图上的字符。'
 - 内容: 'These two computed properties provide the strings used in the view. They take the roll or pitch value from the motion detector and format that number as a string with a fixed number of digits. The describeAsFixedLengthString() method is a custom method on the Double type. You can learn how it works in DoubleExtension.swift.'
   提示: ''
-  翻译: '这两个计算属性提供了视图中使用的字符串。它们从 motion detector 中获取翻滚角或俯仰角的值，并将该数字格式化为具有固定位数的字符串。describeAsFixedLengthString() 方法是 Double 类型的自定义方法。你可以在 DoubleExtension.swift 中了解它的工作原理。'
+  翻译: '这两个计算属性提供了视图中使用的字符串。它们从 motion detector 中获取 roll 或 pitch 的值，并将该数字格式化为具有固定位数的字符串。describeAsFixedLengthString() 方法是 Double 类型的自定义方法。你可以在 DoubleExtension.swift 中了解它的工作原理。'
 - 内容: 'Here is the value for the roll of the device, presented as text.'
   提示: ''
   翻译: '这里是设备的翻滚角的值，以文本形式呈现。'
 - 内容: 'Because this view uses a published value from detector, SwiftUI updates it any time the motion detector’s roll value changes.'
   提示: ''
-  翻译: '因为这个视图使用了 detector 的一个 published value，所以 SwiftUI 会在运动检测器的翻滚角的值发生变化时更新它。'
+  翻译: '因为这个视图使用了 detector 的一个 published value，所以 SwiftUI 会在 detecotr 的 roll 值发生变化时更新它。'
 - 内容: 'The .font modifier formats this Text view with a monospaced font. By default, a Text view uses a system font with proportional width, but that causes the text view to change its width as the numbers change.'
   提示: ''
-  翻译: '.font 装饰器使用等宽字体格式化这个 Text 视图。默认情况下，Text 视图使用系统字体，它的宽度是比例宽度，但这会导致 Text 视图在数字变化时改变它的宽度。'
+  翻译: '.font 修饰符使用等宽字体格式化这个 Text 视图。默认情况下，Text 视图使用系统字体，它的宽度是比例宽度，但这会导致 Text 视图在数字变化时改变它的宽度。'
 - 内容: 'With a monospaced font, each character has the same width. (For example, the strings 1.01 and 3.14 have different widths with a proportional font like Helvetica or Times, but 1.01 and 3.14 have the same width with a monospaced font like Courier or Menlo.)'
   提示: ''
   翻译: '在等宽字体下，每个字符的宽度都是相同的。（例如，1.01 和 3.14 这两个字符串在 Helvetica 或 Times 等比例字体下的宽度是不同的，但在 Courier 或 Menlo 等等宽字体下，1.01 和 3.14 的宽度是相同的。）'
 - 内容: 'Bubble Level View'
   提示: ''
-  翻译: ''
+  翻译: '泡泡水平仪.pre视图'
 - 内容: 'Learn to display the tilt of your device using a bubble level UI.'
   提示: ''
-  翻译: '学习如何使用气泡水平仪的 UI 来显示设备的倾斜。'
+  翻译: '学习何使用 气泡水平仪的 UI 来显示设备的倾斜。'
 - 内容: 'This view displays the tilt of your device by drawing a circle within a larger circular boundary with crosshairs to indicate its centerpoint. When your device is level, the bubble rests at the center of the frame. Try tilting your device to see how the bubble moves.'
   提示: ''
-  翻译: ''
+  翻译: '这个在自定义视图通过在一个较大的圆形边界内绘制一个圆圈，并用十字线来指示它的中心点，来显示你的设备的倾斜。当你的设备水平时，气泡会停留在框架的中心。试着倾斜你的设备，看看气泡是如何移动的。'
 - 内容: 'This property holds a MotionDetector instance, which senses changes in your device’s motion. You can access this instance in your code to update the user interface as the motion data changes.'
   提示: ''
-  翻译: ''
+  翻译: '这个属性持有一个 MotionDetector 实例，它可以感知你的设备运动的变化。你可以在你的代码中访问这个实例，以便在运动数据发生变化时更新用户界面。'
 - 内容: 'Because detector is an observable object, any changes to its published values allows SwiftUI to automatically update any views using those values. In this case, you’ll update the bubble’s position.'
   提示: ''
   翻译: '因为 detector 是一个可观察对象，所以任何对它的 published 值的更改都会使 SwiftUI 自动更新使用这些值的任何视图。在这种情况下，你将更新气泡的位置。'
 - 内容: 'This property represents the range of values the motion detector reports as you tilt the device (assuming you don’t turn it upside down). Negative values indicate a tilt to the left, and positive values indicate a tilt to the right. (You could assign the value 3.14 to this property, but Double.pi is convenient shorthand for the mathematical constant π, and it’s a closer approximation because it includes many digits of precision.)'
   提示: ''
-  翻译: ''
+  翻译: '这个属性表示运动检测器在你倾斜设备时报告的值的范围（假设你没有把它倒过来）。负值表示向左倾斜，正值表示向右倾斜。（你可以给这个属性赋值 3.14，但 Double.pi 是数学常量 π 的方便简写，它是一个更接近的近似值，因为它的精度更高。）'
 - 内容: 'This is the size of the level display, both width and height. You can change this value to make the display larger or smaller.'
   提示: ''
-  翻译: ''
+  翻译: '这就是水平仪显示的大小，宽度和高度。你可以改变这个值来使其显示得更大或更小。'
 - 内容: 'It’s useful to define and use constants like these for important values in your code, rather than using the values themselves. When you read the code, you’ll have a better idea of what it does than if you see a lot of numbers with no context.'
   提示: ''
-  翻译: ''
+  翻译: '比起来直接使用这些值，定义和使用这样的常量来表示代码中的重要值更有用。当你阅读代码时，看到这样的常量通常比看到一堆没有上下文的数字更容易理解它的作用。'
 - 内容: 'This property calculates the horizontal placement of the bubble using three steps.'
   提示: ''
-  翻译: ''
+  翻译: '这个属性使用三个步骤来计算气泡的水平位置。'
 - 内容: 'First, adjust the roll value from the detector so that it has a minimum of 0 and goes up to the value of π, and store the adjusted value in zeroBasedRoll. This helps with the next part of the calculation, which needs values greater than 0.'
   提示: ''
-  翻译: ''
+  翻译: '首先，调整检测器的 roll 值，使其最小值为 0，最大值为 π，并将调整后的值存储在 zeroBasedRoll 中。这有助于下一部分的计算，该计算需要大于 0 的值。'
 - 内容: 'Then, use this adjusted value to calculate the roll as a fraction of the entire range of roll values, so that full tilt left is 0.0, flat is 0.5, and full tilt right is 1.0.'
   提示: ''
-  翻译: ''
+  翻译: '接下来，使用这个调整后的值来计算 roll 作为整个 roll 值范围的一个分数，这样完全向左倾斜就是 0.0，水平就是 0.5，完全向右倾斜就是 1.0。'
 - 内容: 'Multiplying the fraction with the size of the level gives you the X position of the bubble.'
   提示: ''
-  翻译: ''
+  翻译: '将这个分数乘以水平仪的大小，就得到了气泡的 X 位置。'
 - 内容: 'Because all of these calculations are hidden in a property, your view’s body code remains simple and readable.'
   提示: ''
-  翻译: ''
+  翻译: '因为所有这些计算都隐藏在一个属性中，所以你的视图的 body 代码保持简单和可读。'
 - 内容: 'While you can write all of the code here in a longer mathematical expression, decomposing the code makes it easier to understand. (Can you imagine having to explain this code if it were written in one line?!)'
   提示: ''
-  翻译: ''
+  翻译: '虽然你可以在这里写所有的代码，但是把代码分解开来会更容易理解。（你能想象如果这段代码写在一行里，你要怎么解释这段代码吗？！）'
 - 内容: 'This property calculates the vertical position of the bubble in the same way that bubbleXPosition works.'
   提示: ''
-  翻译: ''
+  翻译: '这个属性以与 bubbleXPosition 相同的方式计算气泡的垂直位置。'
 - 内容: 'This property returns a vertical line that you use to draw the bubble level display. Because there are multiple identical vertical lines, you can use this property whenever you need one rather than repeating the more complex code inside it.'
   提示: ''
-  翻译: ''
+  翻译: '这个属性返回一个垂直线，你可以用它来绘制气泡水平仪的显示。因为有多个相同的垂直线，所以你可以在需要一个垂直线时使用这个属性，而不是重复其中的更复杂的代码。'
 - 内容: 'Here’s a circle with a gray foreground color that provides a visual boundary for the display.'
   提示: ''
-  翻译: ''
+  翻译: '这里是一个圆，它有一个灰色的前景色，为显示提供了一个视觉边界。'
 - 内容: 'You can use a .frame modifier to give the circle a fixed width and height, which is important to draw the other components correctly.'
   提示: ''
-  翻译: ''
+  翻译: '你可以使用 .frame 修饰符给圆一个固定的宽度和高度，这对于正确绘制其他组件很重要。'
 - 内容: 'The .overlay modifier adds a view on top of the circle that occupies the same area.'
   提示: ''
-  翻译: ''
+  翻译: '.overlay 修饰符在圆上面添加一个视图，该视图占用相同的区域。'
 - 内容: 'The overlay is useful here because it positions the level’s components relative to the circle they’re drawn in.'
   提示: ''
-  翻译: ''
+  翻译: 'overlay 在这里很有用，因为它将水平仪的组件相对于它们绘制的圆进行定位。'
 - 内容: 'A ZStack view allows you to draw the components of the level over each other.'
   提示: ''
-  翻译: ''
+  翻译: '一个 ZStack .pre视图允许你将水平仪的组件绘制在彼此上面。'
 - 内容: 'The first circle represents the bubble. Notice that the bubbleXPosition and bubbleYPosition values position the bubble inside the overlay view.'
   提示: ''
-  翻译: ''
+  翻译: '第一个代表气 泡。注意，bubbleXPosition 和 bubbleYPosition 值将气泡定位在覆盖视图内。'
 - 内容: 'Because these properties use published values from MotionDetector, SwiftUI updates the bubble view’s position each time they change.'
   提示: ''
-  翻译: ''
+  翻译: '因为这在自定义些属性使用了 MotionDetector 的 published 值，所以 SwiftUI 在每次它们改变时都会更新气泡视图的位置。'
 - 内容: 'Step 22'
   提示: ''
   翻译: ''
 - 内容: 'In the center are a smaller circle and a crosshair made of two lines: one horizontal and one vertical.'
   提示: ''
-  翻译: ''
+  翻译: '在中心是一个较小的圆和一个由两条线组成的十字线：一条水平线和一条垂直线。'
 - 内容: 'Step 23'
   提示: ''
   翻译: ''
 - 内容: 'There are four other lines on the edge of the frame of the bubble level display. You can use the .position modifier to move them relative to their default position at the center of the overlay view.'
   提示: ''
-  翻译: ''
+  翻译: '这里还有其他四条线在气泡水平仪显示的边框上。你可以使用 .position 修饰符将它们相对于它们在覆盖视图中心的默认位置移动。'
 - 内容: 'Double Extension'
   提示: ''
-  翻译: ''
+  翻译: '给 Double 类型增加扩展'
 - 内容: 'Investigate using an extension on Double to format them in an easy to read way.'
   提示: ''
-  翻译: ''
+  翻译: '研究使用 Double 的扩展以一种易于阅读的方式格式化它们。'
 - 内容: 'An extension is a way to make custom behavior for existing types. Declaring extension Double means you’re adding new capabilities to the Double type. Any time you use a Double value in your code, you can access anything defined in this extension.'
   提示: ''
-  翻译: ''
+  翻译: '扩展是为现有类型添加自定义行为的一种方式。声明扩展 Double 意味着你正在为 Double 类型添加新的功能。任何时候你在代码中使用 Double 值，你都可以访问在这个扩展中定义的任何东西。'
 - 内容: 'This method returns a string describing the value of a Double using a fixed number of digits. You can pass in the number of integer digits and fraction digits you want, or leave those arguments out for the default values of 2.'
   提示: ''
-  翻译: ''
+  翻译: '这个方法返回一个字符串，描述一个 Double 的值，使用固定数量的数字。你可以传入你想要的整数位数和小数位数，或者忽略这些参数，使用默认值 2。'
 - 内容: 'The formatted() method operates on a number of basic types such as Date, Int, and Double, which are all commonly represented as strings in an app. Because there are so many ways to format these strings, the formatted() method gives you ways to customize how they’re represented. For example, does a number represent a percentage, or a simple value, or maybe a price?'
   提示: ''
-  翻译: ''
+  翻译: 'formatted() 方法对一些基本类型进行操作，比如 Date、Int 和 Double，它们在应用中都通常表示为字符串。因为有很多方法可以格式化这些字符串，所以 formatted() 方法提供了一些方法来自定义它们的表示方式。例如，一个数字代表一个百分比，还是一个简单的值，或者一个价格？'
 - 内容: 'The argument to formatted() is a format style.'
   提示: ''
-  翻译: ''
+  翻译: 'formatted() 的参数是一个 format style。'
 - 内容: 'The .number style gives you a string describing this Double value as a simple number, as opposed to a percentage or a price.'
   提示: ''
-  翻译: ''
+  翻译: '.number style 给你一个字符串，描述这个 Double 值作为一个简单的数字，而不是一个百分比或一个价格。'
 - 内容: 'The .number style has modifiers much like those for SwiftUI views.'
   提示: ''
-  翻译: ''
+  翻译: '.number style 有类似于 SwiftUI 视图的修饰符。'
 - 内容: 'The .sign modifier lets you format the number so that it’s always preceded by a sign, even when the number is positive.'
   提示: ''
-  翻译: ''
+  翻译: '.sign 修饰符让你可以格式化数字，这样即使数字是正数，它也总是以一个符号开头。'
 - 内容: 'The .precision modifier lets you specify exactly how many digits to use.'
   提示: ''
-  翻译: ''
+  翻译: '.precision 修饰符让你可以指定要使用多少位数字。'
 - 内容: 'Seismometer'
   提示: ''
-  翻译: ''
+  翻译: '地震仪'
 - 内容: 'Present dynamic data in custom views.'
   提示: ''
-  翻译: ''
+  翻译: '在自定义视图中呈现动态数据。'
