feat: gesture 一小部分

--- a/project/sample-apps/recognizinggestures.yml
+++ b/project/sample-apps/recognizinggestures.yml
@@ -1,27 +1,27 @@
 - 内容: 'Recognizing Gestures'
   提示: ''
-  翻译: ''
+  翻译: '识别手势'
 - 内容: 'Update shapes or other content in response to taps, rotations, or other Multi-Touch gestures.'
   提示: ''
-  翻译: ''
+  翻译: '当识别到点击、旋转或其他多点触控手势时，更新形状或其他内容。'
 - 内容: 'Welcome to Recognizing Gestures. In this sample you’ll learn how to add different gestures to your views, like taps, drags, and touch and hold.'
   提示: ''
-  翻译: ''
+  翻译: '欢迎来到识别手势。在本示例中，您将学习如何将不同的手势添加到视图中，例如点击、拖动和触摸并保持。'
 - 内容: 'Start by trying out each gesture in the app preview. When you’re ready, dive into the code walkthrough and learn how to add a gesture to your next project.'
   提示: ''
-  翻译: ''
+  翻译: '你可以通过在预览窗口尝试各种手势来开始。当你准备好之后，就可以深入代码并在下一个项目中学习如何添加手势了'
 - 内容: 'Tap'
   提示: ''
-  翻译: ''
+  翻译: '点击'
 - 内容: 'Explore how to apply different colors to a rectangle when tapped.'
   提示: ''
-  翻译: ''
+  翻译: '探索如何在点击的时候给正方形赋予不同的颜色'
 - 内容: 'Step 1'
   提示: ''
   翻译: ''
 - 内容: 'In SwiftUI, you can add a gesture directly to a view using a .gesture modifier. Here, you’ll explore how to add a tap gesture to a rectangle view so that it changes color when pressed.'
   提示: ''
-  翻译: ''
+  翻译: '在 SwiftUI 中，你可以'
 - 内容: 'Step 2'
   提示: ''
   翻译: ''
