--- a/project/sample-apps/aboutme.yml
+++ b/project/sample-apps/aboutme.yml
@@ -6,13 +6,13 @@
   翻译: '在多个视图中显示来自一个中心源的数据。'
 - 内容: 'Welcome to the About Me app. In this walkthrough, you’ll learn the basics of using SwiftUI to display information across multiple tab views.'
   提示: ''
-  翻译: '欢迎使用 About Me 应用程序。在这个演示中，你将学习使用 SwiftUI 来在多个标签视图中显示信息。'
+  翻译: '欢迎使用 About Me 应用程序。在这个演示中，你将学习使用 SwiftUI 在多个标签视图中显示信息。'
 - 内容: 'Run the preview and tap to select the Home, Story, Favorites, and Fun Facts tabs at the bottom of the screen.'
   提示: ''
   翻译: '运行预览并选择屏幕底部的 Home, Story, Favorites, 和 Fun Facts 标签栏。'
 - 内容: 'You can change all of the data, or content, in the app to be about any topic of your choice. While you walk through this sample, try swapping out the information and edit colors and modifiers to suit your style.'
   提示: ''
-  翻译: '你可以更改应用程序中的所有数据或者内容，让他适合你的偏好。在演示中，你可以交换信息和修改颜色和修饰符来定制你的风格。'
+  翻译: '你可以按照你的偏好更改应用程序中的所有数据或者内容。在演示中，你可以修改信息和颜色以及修饰符来定制你的风格。'
 - 内容: 'Tabbed Interface'
   提示: ''
   翻译: '标签视图'
@@ -36,7 +36,7 @@
   翻译: '第三步'
 - 内容: 'TabView is how you create a user interface with tabs. Inside the tab view, you list each of the tab items that you want.'
   提示: ''
-  翻译: 'TabView 是你创建的带有标签的展示用户界面的视图。在 tab 视图中，列出了需要的标签项。'
+  翻译: 'TabView 是你创建的带有标签的展示用户界面的视图。在 tab 视图中，你列出了需要展示的标签项。'
 - 内容: 'Step 4'
   提示: ''
   翻译: '第四步'
@@ -60,7 +60,7 @@
   翻译: '第七步'
 - 内容: 'The tabItem modifier only accepts Label, Text, and Image views. Including any other type of view, such as Button, results in an empty tab item.'
   提示: ''
-  翻译: 'tabItem 修饰符只接受 Label、Text 和 Image 视图。任何其他类型的视图，例如 Button，都将导致空的标签内容。'
+  翻译: 'tabItem 修饰符只接受 Label、Text 和 Image 视图。任何其他类型的视图，例如 Button 都将导致空的标签内容。'
 - 内容: 'Your Data'
   提示: ''
   翻译: '你的数据'
@@ -72,19 +72,19 @@
   翻译: '这个文件是存储你的应用数据的地方。在 SwiftUI 中，最好将数据和应用的可视化组件分开。在学习 SwiftUI 时，你会经常看到将数据有一个 “真实来源” 的概念，这意味着你只在一个地方定义一个值，你将在下面的步骤中分几步练习修改数据。'
 - 内容: 'This structure provides the blueprint for your data. It contains properties that define the name and type of data that the app stores. For instance, your app stores a story property as a String and a colors property as an array of Color values.'
   提示: ''
-  翻译: '这个结构提供你的数据的蓝图。它包含定义应用存储的数据和类型。例如，你的应用存储一个 String 类型的 Story 属性和内部为 Color 类型的名为 colors 的数组。'
+  翻译: '这个结构体表示你需要的数据结构。它包含定义应用存储的数据和类型。例如，你的应用存储一个 String 类型的 Story 属性和内部为 Color 类型的名为 colors 的数组。'
 - 内容: 'This value, information, uses the Info structure to store all of the data used in your app. You can refer to this global variable by its name from any file of the project.'
   提示: ''
-  翻译: 'information 的值，使用 Info 结构体来存储所有用于应用的数据。你可以在项目的任何文件中引用这个全局变量。'
+  翻译: 'information 使用 Info 结构体来存储所有用于应用的数据。你可以在项目的任何文件中引用这个全局变量。'
 - 内容: 'To personalize this project, change the string inside the quotes to your name.'
   提示: ''
-  翻译: '要个性化这个项目，修改在引号内的字符串为你想要的内容'
+  翻译: '要个性化这个项目，修改在引号内的字符串为你想要的内容。'
 - 内容: 'The value for your name is only created this one time, making it the source of truth. Whenever you want to use your name in a component or view, you refer to this value by its name: information.name.'
   提示: ''
-  翻译: '你定义的名称仅创建一次，因此它是你的真实来源。当你想在组件或视图中使用你的名称时，你可以引用它的名称： information.name。'
+  翻译: '你定义的名称仅在这里创建一次，因此它是你数据源。当你想在组件或视图中使用你的名称时，你可以引用它的名称： information.name。'
 - 内容: 'Before moving on, try changing the image. The string “Placeholder” refers to the name of an image in your app’s assets. To add a new image, open the sidebar and tap the Add New Item button in the toolbar. Choose Photo, and select an image from your Photos library. Then give your image a descriptive name.'
   提示: ''
-  翻译: '在继续之前，尝试更改图片。字符串 “Placeholder” 代表应用程序的资产中的名字。要添加一个新的图片，打开工具栏并点击 Add New Item 按钮。选择 Photo 并选择你的 Photos 库中的图片。然后为你的图片添加一个描述性的名称。'
+  翻译: '在继续之前，尝试更改图片。字符串 “Placeholder” 代表应用程序的资产中的名字。要添加一个新的图片，打开工具栏并点击 Add New Item 按钮。选择 Photo 并选择你的图片库中的图片。然后为你的图片添加一个描述性的名称。'
 - 内容: 'To use your new image, change “Placeholder” to the name of the new image you just added. Tap the the Home tab in the Preview to see your changes.'
   提示: ''
   翻译: '要使用你的新图片，更改 “Placeholder” 为你添加的新图片的名称。点击 Preview 中的 Home 按钮来查看你的修改。'
@@ -114,7 +114,7 @@
   翻译: '在继续之前尝试更改字符串。在预览中你看到了你设置的新文本了吗？'
 - 内容: 'You can use modifiers to change how the app displays the text. Here are two good ones to know: You can use .font to specify different styles of text, and .fontWeight to change the weight of the font.'
   提示: ''
-  翻译: '你可以使用修饰符来改变应用显示的文本。下面是两个值得了解的方法:可以使用 .font 来指定不同的样式的文本，以及 .fontWeight 来改变文本的粗细。'
+  翻译: '你可以使用修饰符来改变应用显示的文本。下面是两个值得了解的方法: 可以使用 .font 来指定不同的样式的文本，以及 .fontWeight 来改变文本的粗细。'
 - 内容: 'Try changing .largeTitle and .bold to different values to see how they affect the view. To do this, delete the existing value — including the period (.) — then type a period and wait to see the options suggested in the autocompletion menu.'
   提示: ''
   翻译: '尝试更改 .largeTitle 和 .bold 来不同值来看如何影响视图。要做此事，需要删除现有值 — 包括点(.) — 然后输入点(.)，看看自动补全菜单中建议的选项。'
@@ -141,7 +141,7 @@
   翻译: '第十一步'
 - 内容: 'It allows the image to adapt to the available space on the screen; otherwise the image appears at its full size, which may be very large.'
   提示: ''
-  翻译: '它允许图片适应可用空间，否则图片会显示为完整尺寸,这可能会很大。'
+  翻译: '它允许图片适应可用空间，否则图片会显示为完整尺寸，这可能会很大。'
 - 内容: 'Step 12'
   提示: ''
   翻译: '第十二步'
