--- a/project/sample-apps/dateplanner.yml
+++ b/project/sample-apps/dateplanner.yml
@@ -21,7 +21,7 @@
   翻译: '第一步'
 - 内容: 'To navigate between different views in your app, create a NavigationView as the top-level view in your view hierarchy, inserting the app’s home view. For this app, EventList is that home view and the first view the app displays when it launches.'
   提示: ''
-  翻译: '要在你的应用程序中导航到不同视图，创建一个 NavigationView，作为它们的顶级视图，在视图层次结构中插入应用程序的主页视图。对于此应用程序，EventList 是它的主页视图，也就是应用程序启动时显示的第一个视图。'
+  翻译: '要在你的应用程序中导航到不同视图，创建一个 NavigationView，作为它们的顶层视图，在视图层次结构中插入应用程序的主页视图。对于此应用程序，EventList 是它的主页视图，也就是应用程序启动时显示的第一个视图。'
 - 内容: 'Step 2'
   提示: ''
   翻译: '第二步'
@@ -39,7 +39,7 @@
   翻译: '第四步'
 - 内容: 'The app stores its data using the variable eventData. It’s defined with the @StateObject property wrapper to create an instance of an observable object, EventData. Because this object is observable, SwiftUI watches it to keep track of any changes to its values. Whenever the data changes, SwiftUI automatically updates all of the views that use (or observe) it.'
   提示: ''
-  翻译: '应用程序使用变量 eventData 存储其数据。使用 @StateObject 属性包装器定义此对象，以创建一个可观察的对象 EventData。由于该对象是可观察的，因此 SwiftUI 监视它以跟踪任何变更，，每当数据发生变化时，更新所有使用（或观察）它的视图。'
+  翻译: '应用程序使用变量 eventData 存储其数据。使用 @StateObject 属性包装器定义此对象，以创建一个可观察的对象 EventData。由于该对象是可观察的，因此 SwiftUI 监视它以跟踪任何变更，每当数据发生变化时，更新所有使用（或观察）它的视图。'
 - 内容: 'Step 5'
   提示: ''
   翻译: '第五步'
@@ -57,7 +57,7 @@
   翻译: '为了组织数据，Event planner 使用一个集合，每个事件都代表一次事件，例如一个露营旅行或生日派对。通过符合 Identifiable 协议，你确保 SwiftUI 可以识别和更新每行。'
 - 内容: 'The Event type contains all of the information you need to populate an event, including a symbol, color, title, date, and collection of tasks. Each task is a specific to-do item for the event, such as “Get a camping lantern“.'
   提示: ''
-  翻译: 'Event 类型包含你需要填充事件的所有信息，包括符号、颜色、标题、日期和任务集合。每个任务是事件的具体任代办事项，例如“拿一个露营灯“。'
+  翻译: 'Event 类包含你需要填充事件的所有信息，包括符号、颜色、标题、日期和任务集合。每个任务是事件的具体代办事项，例如“拿一个露营灯“。'
 - 内容: 'You’ll also notice a list of computed properties for Event. These help people organize the sections of their lists based on the date and the number of tasks to complete.'
   提示: ''
   翻译: '你还会注意到一个计算属性列表。这些帮助人们根据日期和任务数来组织列表的各个部分。'
