--- a/project/sample-apps/chooseyourownstory.yml
+++ b/project/sample-apps/chooseyourownstory.yml
@@ -9,7 +9,7 @@
   翻译: '在这个示例中，你可以写一段包括多种路径和结果的故事。你的读者可以在关键点处选择，结果会影响故事的不同体验。'
 - 内容: 'There are several parts to this app. StoryData contains the story itself, including the text on each page and the choices the reader can make.'
   提示: ''
-  翻译: '这个应用程序有几个部分。 StoryData 包含故事本身，包括每页的文本和读者可以选择的选择。'
+  翻译: '这个应用程序有几个部分。 StoryData 包含故事本身，包括每页故事描述文本和读者可以选择的选项。'
 - 内容: 'StoryView sets up the navigation for the app, and StoryPageView displays the contents of one page of the story.'
   提示: ''
   翻译: 'StoryView 设置导航，并使用 StoryPageView 展示故事的内容。'
@@ -21,13 +21,13 @@
   翻译: '创造你自己的故事'
 - 内容: 'Customize the story to create a narrative of your own.'
   提示: ''
-  翻译: '自定义故事来创建自己的故事。'
+  翻译: '自定义故事内容来创建自己的叙事。'
 - 内容: 'Step 1'
   提示: ''
   翻译: '第一步'
 - 内容: 'To construct your narrative, the app needs an instance of Story, which takes an array of StoryPage instances. Each page of your story contains some narrative text and an array of choices to select from. That choice takes you to another story page with more choices that take you to another story page, and so on.'
   提示: ''
-  翻译: '为了构建故事，应用程序需要一个 Story 实例，它包括一个 StoryPage 数组。每个页面的故事包含故事文本和选择，选择会导向另一个故事页面，以此类推。'
+  翻译: '为了构建故事，应用程序需要一个 Story 实例，它包括一个 StoryPage 数组。每个页面的故事包含故事文本和选项，选项会导向另一个故事页面，以此类推。'
 - 内容: 'Step 2'
   提示: ''
   翻译: '第二步'
@@ -39,7 +39,7 @@
   翻译: '第三步'
 - 内容: 'Notice the three quotation marks above and below the text? This is a special way to create a String value. You can read and edit your story much more easily with this special syntax because you can include multiple lines and quotation marks in the text.'
   提示: ''
-  翻译: '注意到文本上和下三个引号了吗？这是一个特殊的方式来创建字符串值。你可以使用这种特殊的语法来编辑故事，用三个引号包住多行文本。'
+  翻译: '注意到文本上下的三个引号了吗？这是一个特殊的方式来创建字符串值。你可以使用这种特殊的语法来编辑故事，用三个引号包住多行文本。'
 - 内容: 'Step 4'
   提示: ''
   翻译: '第四步'
@@ -57,13 +57,13 @@
   翻译: '第五步'
 - 内容: 'The destination property of the choice is the key to story navigation. The number is the index of the page for the app to display when a reader taps to select that choice. Arrays start counting at 0, so the index of the first page is 0, the second page is 1, and so on.'
   提示: ''
-  翻译: '选择的 destination 属性是故事导航的关键。数字是应用程序显示的页面的索引。数组开始计数从 0 开始，所以第一个页面的索引是 0，第二个页面是 1。以此类推。'
+  翻译: '选择的 destination 属性是故事导航的关键。数字是应用程序显示的页面的索引。数组计数从 0 开始，所以第一个页面的索引是 0，第二个页面是 1。以此类推。'
 - 内容: 'Step 6'
   提示: ''
   翻译: '第六步'
 - 内容: 'Try changing the destination of one of these choices and then test where the button navigates to in the app preview. Be careful, though. You have 21 story pages, so using an index higher than 20 causes the app to crash due to an index out of range error.'
   提示: ''
-  翻译: '尝试其中一个选项的目标，然后测试在应用程序预览中导航按钮的位置。不过要注意，我们有 21 个故事页面，因此使用一个大于 20 的索引可能会导致应用程序崩溃。'
+  翻译: '尝试修改其中一个选项的目标，然后测试在应用程序预览中按钮导航的页面。不过要注意，我们有 21 个故事页面，因此使用一个大于 20 的索引可能会导致应用程序崩溃。'
 - 内容: 'Step 7'
   提示: ''
   翻译: '第七步'
@@ -72,7 +72,7 @@
   翻译: '要给故事添加新页面，复制一个现有故事页面，并将其放在故事数组的最后一个页面之后。'
 - 内容: 'Try adding a new page and customizing its text and choices. You’re now ready to start writing the adventure!'
   提示: ''
-  翻译: '尝试添加一个新页面并自定义它的文本和选择。你现在已经可以开始写故事了!'
+  翻译: '尝试添加一个新页面并自定义它的文本和选项。你现在已经可以开始写故事了!'
 - 内容: 'Story Data Model'
   提示: ''
   翻译: '故事数据模型'
@@ -81,13 +81,13 @@
   翻译: '了解如何为读者的故事构建数据。'
 - 内容: 'You’ll use the custom types defined here to model the story data. Your app uses an instance of the Story type to display a series of story pages, each with some narrative text and a number of choices for the reader.'
   提示: ''
-  翻译: '你将使用定义在这里的自定义类型来对故事数据进行建模。您的应用程序使用 Story 类来显示故事页面，每个页面都有故事文本和读者可以选择的选项。'
+  翻译: '你将使用这里的自定义类型来对故事数据进行建模。您的应用程序使用 Story 类来显示故事页面，每个页面都有故事文本和读者可以选择的选项。'
 - 内容: 'The pages property holds an array of StoryPage values, each corresponding to a page of your story.'
   提示: ''
   翻译: 'pages 属性包含一个 StoryPage 数组，每个数组元素对应一个故事页面。'
 - 内容: 'The StoryPage type contains a text value for the narrative text on the page, and a choices array that contains an array of StoryChoice options that a reader can choose from to navigate to another page.'
   提示: ''
-  翻译: 'StroyPage 类包含故事文本的值，以及一个选项数组，该读者可以选择来导航到另一个页面。'
+  翻译: 'StroyPage 类包含故事文本的值，以及一个选项数组，读者可以选择来导航到另一个页面。'
 - 内容: 'The Choice type defines a choice readers can make while reading a story.'
   提示: ''
   翻译: 'Choice 类定义读者可以在故事中选择的选项。'
@@ -162,13 +162,13 @@
   翻译: '大括号内的代码是导航链接显示的内容 — 用户点击的内容。'
 - 内容: 'Navigation links don’t work if they aren’t inside a navigation view (either a NavigationStack or NavigationSplitView), so you’ll notice that the preview for this view won’t let you navigate to the next page. The StoryView creates the navigation view that contains the StoryPageView. Use the app preview, or the preview for the StoryView, to test your story navigation.'
   提示: ''
-  翻译: '如果导航链接不是在一个 NavigationView（如 NavigationStack 或 NavigationSplitView）内，那么它们将不起作用，你可以注意到预览不会导航到下一页。StoryView 创建了 StoryPageView 的导航视图。使用预览，或 StoryView 的预览来测试故事导航。'
+  翻译: '如果导航链接不是在一个 NavigationView（如 NavigationStack 或 NavigationSplitView）内，那么它们将不起作用，你可以注意到预览不会导航到下一页。StoryView 创建了 StoryPageView 的导航视图。使用 App 预览，或 StoryView 的预览来测试故事导航。'
 - 内容: 'Step 10'
   提示: ''
   翻译: '第十步'
 - 内容: 'The most important thing in this label is the Text for displaying the choices. But it’d be nice to match the text alignment with the story page text. To align the text, you’ll use two modifiers: .multilineTextAlignment and frame. Applying the .multilineTextAlignment modifier to the Text view aligns the text to its leading edge.'
   提示: ''
-  翻译: '重要的是显示选项的文本，希望与故事页面文本对齐。要对文本进行对齐，你将使用两个修饰符: .multilineTextAlignment 和 frame。应用他们来对文本进行顺序对齐。'
+  翻译: '重要的是显示选项的文本，需要与故事页面文本对齐。要对文本进行对齐，你将使用两个修饰符: .multilineTextAlignment 和 frame。应用他们来对文本进行顺序对齐。'
 - 内容: 'Step 11'
   提示: ''
   翻译: '第十一步'
@@ -183,7 +183,7 @@
   翻译: '第十二步'
 - 内容: 'These next three modifiers provide a pleasing visual style to the NavigationLink view for each choice. The .padding modifier adds some space around the link’s contents. The .background modifier applies a gray color with 25 percent opacity, and the .cornerRadius modifer rounds its corners.'
   提示: ''
-  翻译: '接下来的三个修饰符为每个选项添加一些美观的视觉样式。 .padding 修饰符为链接的内容添加一些空白。 .background 修饰符为背景色应用 25% 的透明度，.cornerRadius 修饰符为圆角。'
+  翻译: '接下来的三个修饰符为每个选项添加一些美观的视觉样式。 .padding 修饰符为链接的内容添加一些空白边距。 .background 修饰符为背景色应用 25% 的透明度，.cornerRadius 修饰符为圆角。'
 - 内容: 'You can experiment with these modifiers to change how the choice links look. For example, try removing or changing the padding, or changing the background color.'
   提示: ''
   翻译: '你可以尝试修改这些修饰符来改变选项链接的样式。例如，尝试删除或者更改填充，或更改背景颜色。'
