--- a/project/visionos/adding-3d-content-to-your-app.yml
+++ b/project/visionos/adding-3d-content-to-your-app.yml
@@ -4,7 +4,7 @@
 - 内容: 'Add depth and dimension to your visionOS app and discover how to incorporate your app’s content into a person’s surroundings.'
   提示: ''
   翻译: ''
-- 内容: 'Overviewin page link'
+- 内容: 'Overview'
   提示: ''
   翻译: ''
 - 内容: 'A device with a stereoscopic display lets people experience 3D content in a way that feels more real. Content appears to have real depth, and people can view it from different angles, making it seem like it’s there in front of them.'
@@ -13,25 +13,7 @@
 - 内容: 'When building an app for visionOS, think about ways you might add depth to your app’s interface. The system provides several ways to display 3D content, including in your existing windows, in a volume, and in an immersive space. Choose the options that work best for your app and the content you offer.'
   提示: ''
   翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
-- 内容: 'Add depth to traditional 2D windowsin page link'
+- 内容: 'Add depth to traditional 2D windows'
   提示: ''
   翻译: ''
 - 内容: 'Windows are an important part of your app’s interface. With visionOS, apps automatically get materials with the visionOS look and feel, fully resizable windows with spacing tuned for eyes and hands input, and access to highlighting adjustments for your custom controls.'
@@ -58,13 +40,10 @@
 - 内容: 'In addition to giving 2D views more depth, you can also add static 3D models to your 2D windows. The Model3D view loads a USDZ file or other asset type and displays it at its intrinsic size in your window. Use this in places where you already have the model data in your app, or can download it from the network. For example, a shopping app might use this type of view to display a 3D version of a product.'
   提示: ''
   翻译: ''
-- 内容: 'Display dynamic 3D scenes using RealityKitin page link'
+- 内容: 'Display dynamic 3D scenes using RealityKit'
   提示: ''
   翻译: ''
 - 内容: 'RealityKit is Apple’s technology for building 3D models and scenes that you update dynamically onscreen. In visionOS, use RealityKit and SwiftUI together to seamlessly couple your app’s 2D and 3D content. Load existing USDZ assets or create scenes in Reality Composer Pro that incorporate animation, physics, lighting, sounds, and custom behaviors for your content. To use a Reality Composer Pro project in your app, add the Swift package to your Xcode project and import its module in your Swift file. For for information, see Managing files and folders in your Xcode project.'
-  提示: ''
-  翻译: ''
-- 内容: ''
   提示: ''
   翻译: ''
 - 内容: 'When you’re ready to display 3D content in your interface, use a RealityView. This SwiftUI view serves as a container for your RealityKit content, and lets you update that content using familiar SwiftUI techniques.'
@@ -79,7 +58,7 @@
 - 内容: 'For information about how to create content using RealityKit, see RealityKit.'
   提示: ''
   翻译: ''
-- 内容: 'Respond to interactions with RealityKit contentin page link'
+- 内容: 'Respond to interactions with RealityKit content'
   提示: ''
   翻译: ''
 - 内容: 'To handle interactions with the entities of your RealityKit scenes:'
@@ -100,7 +79,7 @@
 - 内容: 'The following example adds a tap gesture recognizer to the sphere view from the previous example. The code also adds InputTargetComponent and CollisionComponent components to the shape to allow the interactions to occur. If you omit these components, the view doesn’t detect the interactions with your entity.'
   提示: ''
   翻译: ''
-- 内容: 'Display 3D content in a volumein page link'
+- 内容: 'Display 3D content in a volume'
   提示: ''
   翻译: ''
 - 内容: 'A volume is a type of window that grows in three dimensions to match the size of the content it contains. Windows and volumes both accommodate 2D and 3D content, and are alike in many ways. However, windows clip 3D content that extends too far from the window’s surface, so volumes are the better choice for content that is primarily 3D.'
@@ -112,13 +91,10 @@
 - 内容: 'Windows and volumes are a convenient way to display bounded 2D and 3D content, but your app doesn’t control the placement of that content in the person’s surroundings. The system sets the initial position of each window and volume at display time. The system also adds a window bar to allow someone to reposition the window or resize it.'
   提示: ''
   翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
 - 内容: 'For more information about when to use volumes, see Human Interface Guidelines > Windows.'
   提示: ''
   翻译: ''
-- 内容: 'Display 3D content in a person’s surroundingsin page link'
+- 内容: 'Display 3D content in a person’s surroundings'
   提示: ''
   翻译: ''
 - 内容: 'When you need more control over the placement of your app’s content, add that content to an ImmersiveSpace. An immersive space offers an unbounded area for your content, and you control the size and placement of content within the space. After receiving permission from the user, you can also use ARKit with an immersive space to integrate content into their surroundings. For example, you can use ARKit scene reconstruction to obtain a mesh of furniture and nearby objects and have your content interact with that mesh.'
@@ -143,11 +119,5 @@
   提示: ''
   翻译: ''
 - 内容: 'When an app presents an ImmersiveSpace, the system hides the content of other apps to prevent visual conflicts. The other apps remain hidden while your space is visible but return when you dismiss it. If your app defines multiple spaces, you must dismiss the currently visible space before displaying a different space. If you don’t dismiss the visible space, the system issues a runtime warning when you try to open the other space.'
-  提示: ''
-  翻译: ''
-- 内容: 'See Alsoin page link'
-  提示: ''
-  翻译: ''
-- 内容: 'App constructionin page link'
   提示: ''
   翻译: ''
