--- a/project/visionos/adopting-best-practices-for-privacy.yml
+++ b/project/visionos/adopting-best-practices-for-privacy.yml
@@ -4,7 +4,7 @@
 - 内容: 'Minimize your use of sensitive information and provide a clear statement of what information you do use and how you use it.'
   提示: ''
   翻译: ''
-- 内容: 'Overviewin page link'
+- 内容: 'Overview'
   提示: ''
   翻译: ''
 - 内容: 'To protect user privacy, the system handles camera and sensor inputs without passing the information to apps directly. Instead, the system enables your app to seamlessly interact with a user’s surroundings and to automatically receive input from the user. For example, the system handles the eye- and hand-position data needed to detect interactions with your app’s content. Similarly, the system provides a way to automatically alter a view’s appearance when someone looks at it, without your app ever knowing what the user is looking at.'
@@ -13,19 +13,16 @@
 - 内容: 'In the few cases where you actually need access to hand position or information about the user’s surroundings, the system requires you to obtain authorization from the user first.'
   提示: ''
   翻译: ''
-- 内容: ''
-  提示: ''
-  翻译: ''
 - 内容: 'Important'
   提示: ''
   翻译: ''
 - 内容: 'It’s your responsibility to protect any data your app collects, and to use it in responsible and privacy-preserving ways. Don’t ask for data that you don’t need, be transparent about how you use the data you acquire, and respect the choices of the person whose data it is.'
   提示: ''
   翻译: ''
-- 内容: 'For general information about privacy, see Protecting the User’s Privacy.'
+- 内容: 'For information about how to specify the privacy data your app uses, see Describing data use in privacy manifests. For general information about privacy, see Protecting the User’s Privacy.'
   提示: ''
   翻译: ''
-- 内容: 'Adopt the system-provided input mechanismsin page link'
+- 内容: 'Adopt the system-provided input mechanisms'
   提示: ''
   翻译: ''
 - 内容: 'On Apple Vision Pro, people use their eyes and hands to interact with the items they see in front of them. Where they look determines where the system applies focus, and a tap gesture with either hand generates a touch event on that focused item. The system can also detect when someone’s fingers interact with virtual items in the person’s field of vision. When you adopt the standard UIKit and SwiftUI event-handling mechanisms, you get all of these interactions automatically.'
@@ -43,7 +40,7 @@
 - 内容: 'For information about how to handle the standard-system events, see the SwiftUI and UIKit documentation.'
   提示: ''
   翻译: ''
-- 内容: 'Provide clear messaging around privacy-sensitive featuresin page link'
+- 内容: 'Provide clear messaging around privacy-sensitive features'
   提示: ''
   翻译: ''
 - 内容: 'The following ARKit features require you to provide a usage description string in your app’s Info.plist file:'
@@ -59,11 +56,5 @@
   提示: ''
   翻译: ''
 - 内容: 'For information about requesting access to ARKit data, see ARKit. For guidance on how to craft good messages around privacy-friendly features, see Human Interface Guidelines.'
-  提示: ''
-  翻译: ''
-- 内容: 'See Alsoin page link'
-  提示: ''
-  翻译: ''
-- 内容: 'Designin page link'
   提示: ''
   翻译: ''
