fix: remove hyperlink syntax

--- a/project/visionos/swift-splash.yml
+++ b/project/visionos/swift-splash.yml
@@ -48,13 +48,13 @@
   翻译: '并行化的资产加载'
 - 内容: 'To maximize load speed and make the most efficient use of available compute resources, Swift Splash parallelizes loading scenes from the Reality Composer project using a TaskGroup. The app creates a separate Task for each of the scenes it needs to load.'
   提示: ''
-  翻译: '为了尽可能提升加载速度以及最高效地运用可用的计算资源，Swift Splash 通过 [TaskGroup](https://developer.apple.com/documentation/Swift/TaskGroup) 并行化地加载 Reality Composer 工程中的所有场景。程序会为需要加载资产的每一个场景创建一个独立的 [Task](https://developer.apple.com/documentation/Swift/Task)。'
+  翻译: '为了尽可能提升加载速度以及最高效地运用可用的计算资源，Swift Splash 通过 TaskGroup 并行化地加载 Reality Composer 工程中的所有场景。程序会为需要加载资产的每一个场景创建一个独立的 Task。'
 - 内容: 'The app then uses an async iterator to wait for and receive the results.'
   提示: ''
   翻译: '程序随后会使用异步迭代器来等待并接收加载结果。'
 - 内容: 'For more information on task groups, see Concurrency in The Swift Programming Language.'
   提示: ''
-  翻译: '有关任务组（task groups）的更多信息，详见 [The Swift Programming Language](https://docs.swift.org/swift-book/) 中的 [Concurrency](https://docs.swift.org/swift-book/LanguageGuide/Concurrency.html) 相关内容。'
+  翻译: '有关任务组（task groups）的更多信息，详见 The Swift Programming Language 中的 Concurrency 相关内容。'
 - 内容: 'Each of these loaded pieces acts as a template. When the player adds a new piece of that type, the app clones the piece loaded from Reality Composer Pro and adds the clone to the scene.'
   提示: ''
   翻译: '每一个已经加载的部件都会被看作是一个模板。当玩家在项目中添加了同类部件时，程序会从 Reality Composer Pro 中复制加载过的部件，然后将该部件添加到场景中。'
@@ -87,7 +87,7 @@
   翻译: '有两种不同的方式可供玩家在 Swift Splash 中进行交互来构建和编辑游乐设施。他们可以通过 SwiftUI 窗口完成特定的操作，例如新增一段新滑道，或是移除一段已经添加到设施中的滑道部件。玩家还可利用 visionOS 支持的标准手势来操作部件，包括点按、双击、拖动和旋转。玩家点击部件以选择或取消选择它。当玩家双击部件时，他们会选择该部件，而不会取消选中的其他部件。当有人去拖移部件时，它会在沉浸式空间中移动，如果和另一个部件靠得足够近，它们就会自动吸附在一起。使用两指旋转手势会让选中的轨道部件或所有部件沿着 Z 轴进行旋转。'
 - 内容: 'Swift Splash handles all of these interactions using standard SwiftUI gestures targeted to an entity. To support any of these gestures at any time, the app declares them using SimultaneousGesture. The code for all of the gestures are contained in TrackBuildingView, which controls the app’s immersive space. Here’s how the app defines the rotation gesture:'
   提示: ''
-  翻译: 'Swift Splash 在目标实体上采用标准的 SwiftUI 手势去处理其所有的交互操作。为了能随时给任意手势提供支持，应用内使用 [SimultaneousGesture](https://developer.apple.com/documentation/SwiftUI/SimultaneousGesture) 来进行声明。所有的手势代码都包含在 TrackBuildingView 中，这个视图管理着应用内的沉浸式空间。以下是在应用中定义旋转手势的代码：'
+  翻译: 'Swift Splash 在目标实体上采用标准的 SwiftUI 手势去处理其所有的交互操作。为了能随时给任意手势提供支持，应用内使用 SimultaneousGesture 来进行声明。所有的手势代码都包含在 TrackBuildingView 中，这个视图管理着应用内的沉浸式空间。以下是在应用中定义旋转手势的代码：'
 - 内容: 'Because multiple tap gestures on the same RealityView execute with a different number of taps, multiple gestures may be called at once. If a player double taps an entity, for example, both the single tap and the double tap gesture code get called, and the app has to determine which one to execute. Swift Splash makes this determination by using a Boolean state variable. If a player single taps, it sets that variable — called shouldSingleTap — to true. Then it waits for a period of time before executing the rest of its code. If shouldSingleTap gets set to false while it’s waiting, the code doesn’t execute. When SwiftSplash detects a double tap gesture, it sets shouldSingleTap to false, preventing the single-tap code from firing when it executes the double-tap code.'
   提示: ''
-  翻译: '因为在相同的 [RealityView](https://developer.apple.com/documentation/RealityKit/RealityView) 上执行的多次点按手势可能带有不同的点击次数，多种手势可能会同时被响应。举个例子来说，如果玩家对一个实体进行双击操作，实际上单击和双击的手势代码都会被调用，最终执行的手势由程序决定。Swift Splash 通过一个布尔状态变量来做这个决定。如果玩家单击了，程序会将此变量（叫做 shouldSingleTap）设置为 true。然后程序会等待一段时间再去执行后续的代码。如果在等待阶段 shouldSingleTap 被设定为 false，那么代码就不会被执行。当 Swift Splash 检测到一个双击手势，它会将 shouldSingleTap 设置为 false，以避免在执行双击代码时触发单击代码。'
+  翻译: '因为在相同的 RealityView 上执行的多次点按手势可能带有不同的点击次数，多种手势可能会同时被响应。举个例子来说，如果玩家对一个实体进行双击操作，实际上单击和双击的手势代码都会被调用，最终执行的手势由程序决定。Swift Splash 通过一个布尔状态变量来做这个决定。如果玩家单击了，程序会将此变量（叫做 shouldSingleTap）设置为 true。然后程序会等待一段时间再去执行后续的代码。如果在等待阶段 shouldSingleTap 被设定为 false，那么代码就不会被执行。当 Swift Splash 检测到一个双击手势，它会将 shouldSingleTap 设置为 false，以避免在执行双击代码时触发单击代码。'
