--- a/project/visionos/swift-splash.yml
+++ b/project/visionos/swift-splash.yml
@@ -1,6 +1,6 @@
 - 内容: 'Swift Splash'
   提示: ''
-  翻译: ''
+  翻译: '盛大的'
 - 内容: 'Use RealityKit to create an interactive ride in visionOS.'
   提示: ''
   翻译: ''
