--- a/project/visionos/creating-fully-immersive-experiences.yml
+++ b/project/visionos/creating-fully-immersive-experiences.yml
@@ -12,31 +12,31 @@
   翻译: '完全沉浸式的体验会用你创建的自定义内容替代用户看到的一切。你可以使用这种类型的体验来：'
 - 内容: 'Offer a temporary transitional experience'
   提示: ''
-  翻译: '提供一种临时的过渡体验'
+  翻译: '提供一种临时的过渡性体验'
 - 内容: 'Create a distraction-free space for your content'
   提示: ''
   翻译: '为你的内容创建一个无干扰的空间'
 - 内容: 'Implement a virtual reality (VR) game'
   提示: ''
-  翻译: '实现虚拟现实（VR）游戏'
+  翻译: '实现虚拟现实(VR)游戏'
 - 内容: 'Present a virtual world to explore'
   提示: ''
   翻译: '呈现一个可以探索的虚拟世界'
 - 内容: 'With a fully immersive experience, you’re responsible for everything that appears onscreen. The system hides passthrough video and displays the content you provide, showing the person’s hands only when they come into view. To achieve the best performance, use RealityKit or Metal to create and animate your content.'
   提示: ''
-  翻译: '在完全沉浸式的体验中，你要负责屏幕上显示的所有内容。系统隐藏穿透视频，显示你提供的内容，人出现在视野里时会显示人的手部。为了获得最佳性能，请使用 RealityKit 或 Metal 来创建和动画你的内容。'
+  翻译: '在完全沉浸式的体验中，你要负责屏幕上显示的所有内容。系统隐藏摄像头捕捉到的实时视频，显示你提供的内容，只有当人出现在视野里时会显示人的手部。为了获得最佳性能，请使用 RealityKit 或 Metal 来使你的内容产生动画效果。'
 - 内容: 'Typically, you combine a fully immersive experience with other types of experiences and provide transitions between them. When you display a window first and then offer controls to enter your immersive experience, you give people time to prepare for the transition. It also gives them the option to skip the experience if they prefer to use your app’s windows instead.'
   提示: ''
   翻译: '通常来讲，你将完全沉浸式的体验与其他类型的体验结合起来，并在它们之间提供过渡。当你先显示一个窗口，然后提供控件以进入你的沉浸式体验时，你为用户准备过渡提供了时间。这也为用户提供了选择，如果用户更愿意使用你的应用程序的窗口，可以跳过该体验。'
 - 内容: 'Prepare someone for your app’s transitions'
   提示: ''
-  翻译: '应用程序的过渡诗用户做好准备'
+  翻译: '应用程序的过渡使用户做好准备'
 - 内容: 'Give people control over when they enter or exit fully immersive experiences, and provide clear transitions to and from those experiences. Clear visual transitions make it easier to adjust to such a large change. Sudden transitions might be disorienting, unpleasant, or make the person think something went wrong.'
   提示: ''
-  翻译: '让用户有权控制何时进入或退出完全沉浸式的体验，并为这些体验提供明确的过渡。清晰的视觉过渡让用户更容易适应如此巨大的变化。突然的过渡可能会让人感到迷失、不愉快，或让人认为出现了问题。'
+  翻译: '让用户有权控制何时进入或退出沉浸式的体验，并为这些体验提供明确的过渡。清晰的视觉过渡让用户更容易适应如此巨大的变化。突然的过渡可能会让人感到迷失、不愉快，或让人认为出现了问题。'
 - 内容: 'At launch time, display windows or other content that allows the person to see their surroundings. Add controls to that content to initiate the transition to the fully immersive experience, and provide a clear indication of what the controls do. Inside your experience, provide clear controls and instructions on how to exit the experience.'
   提示: ''
-  翻译: '在启动时，显示窗口或其他内容，让用户能够看到周围环境。向该内容添加控件，以启动进入完全沉浸式体验的过渡，并清晰指示控件的功能。在你的体验中，提供清晰的控件和有关如何退出体验的说明。'
+  翻译: '在启动时，显示窗口或其他内容，让用户能够看到周围环境。向该内容添加控件，以启动进入完全沉浸式体验的过渡，并清晰指出控件的功能。在用户的体验中，提供清晰的关于如何退出体验的控件和说明。'
 - 内容: 'Warning'
   提示: ''
   翻译: '警告'
@@ -45,13 +45,13 @@
   翻译: '当你启动完全沉浸式体验时，visionOS 定义了一个系统边界，其范围从用户头部的初始位置延伸 1.5 米。如果他们的头部移动到该区域之外，系统会自动停止沉浸式体验并重新打开外部视频。这个功能有助于防止用户与物体碰撞。'
 - 内容: 'For guidelines on how to design fully immersive experiences, see Human Interface Guidelines.'
   提示: ''
-  翻译: '有关如何设计完全沉浸式体验的指南，请阅读[人机界面指南](https://developer.apple.com/design/human-interface-guidelines)。'
+  翻译: '有关如何设计完全沉浸式体验的指南，请阅读 [人机界面指南](https://developer.apple.com/design/human-interface-guidelines)。'
 - 内容: 'Open an immersive space'
   提示: ''
   翻译: '打开一个沉浸式空间'
 - 内容: 'To create a fully immersive experience, open an ImmersiveSpace and set its style to full. An immersive space is a type of SwiftUI scene that lets you place content anywhere in the person’s surroundings. Applying the full style to the scene tells the system to hide passthrough video and display only your app’s content.'
   提示: ''
-  翻译: '要创建完全沉浸式的体验，请打开一个 [ImmersiveSpace](https://developer.apple.com/documentation/SwiftUI/ImmersiveSpace) 并将其样式设置为 [全屏](https://developer.apple.com/documentation/SwiftUI/ImmersionStyle/full)。沉浸式空间是一种 SwiftUI scene，允许你将内容放置在个体周围的任何地方。将 [全屏](https://developer.apple.com/documentation/SwiftUI/ImmersionStyle/full) 样式应用于场景告诉系统隐藏穿透视频，并仅显示你应用程序的内容。'
+  翻译: '要创建完全沉浸式的体验，请打开一个 [ImmersiveSpace](https://developer.apple.com/documentation/SwiftUI/ImmersiveSpace) 并将其样式设置为 [全屏](https://developer.apple.com/documentation/SwiftUI/ImmersionStyle/full)。沉浸式空间是一种 SwiftUI scene，允许你将内容放置在个体周围的任何地方。将 [全屏](https://developer.apple.com/documentation/SwiftUI/ImmersionStyle/full) 样式应用于场景会告知系统隐藏摄像头捕捉到的实时视频，并仅显示你应用程序的内容。'
 - 内容: 'Declare spaces in the body property of your app object, or anywhere you manage SwiftUI scenes. The following example shows an app with a main window and a fully immersive space. At launch time, the app displays the window.'
   提示: ''
   翻译: '在你的应用程序对象的 [body](https://developer.apple.com/documentation/SwiftUI/App/body-swift.property) 属性中声明空间，或者在你管理 SwiftUI scenes 的任何地方声明。以下示例显示了一个具有主窗口和一个完全沉浸式空间的应用程序。在启动时，应用程序显示主窗口。'
@@ -81,7 +81,9 @@
   翻译: '使用 Metal 绘制你的内容'
 - 内容: 'Another option for creating fully immersive scenes is to draw everything yourself using Metal. When using Metal to draw your content, use the Compositor Services framework to place that content onscreen. Compositor Services provides the code you need to set up your Metal rendering engine and start drawing.'
   提示: ''
-  翻译: '另一种创建完全沉浸式场景的选项是使用 Metal 自己绘制所有内容。在使用 Metal 绘制内容时，使用 Compositor Services 框架将该内容放置在屏幕上。Compositor Services 提供了你设置 Metal 渲染引擎并开始绘制的代码。'
+  翻译: '另一种创建完全沉浸式场景的选项是使用 Metal 自己绘制所有内容。在用 Metal 绘制内容时，使用 Compositor Services 框架将该内容放置在屏幕上。Compositor Services 为你提供了设置 Metal 渲染引擎并开始绘制的代码。'
 - 内容: 'For details on how to render content using Metal and Compositor Services, and manage interactions with your content, see Drawing fully immersive content using Metal.'
   提示: ''
   翻译: '有关如何使用 Metal 和 Compositor Services 渲染内容以及管理与内容交互的详细信息，请参阅 [使用 Metal 绘制完全沉浸式内容](https://developer.apple.com/documentation/compositorservices/drawing_fully_immersive_content_using_metal)。'
+
+
